加入node.js 启动js文件

--- a/tpls/knowledgeRepo/knowledgeEdit.html
+++ b/tpls/knowledgeRepo/knowledgeEdit.html
@@ -103,8 +103,8 @@
         }
     </style>
 
-    <!--<script src="../../components/javascripts/wangEditor.min.js"></script>-->
-    <!--<script src="../../components/javascripts/jquery-2.0.3.min.js" type="text/javascript" charset="utf-8"></script>-->
+    <!--<script src="/javascripts/wangEditor.min.js"></script>-->
+    <!--<script src="/javascripts/jquery-2.0.3.min.js" type="text/javascript" charset="utf-8"></script>-->
 </head>
 <body onload="UrlSearch();">
 <div class="basic-grey">
