--- a/tpls/knowledgeRepo/knowledgeList.html
+++ b/tpls/knowledgeRepo/knowledgeList.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8"/>
     <title>知识管理</title>
     <!--&lt;!&ndash;后加的2个&ndash;&gt;-->
-    <!--<link rel="stylesheet" type="text/css" href="../components/javascripts/query-ui.min.css"/>-->
-    <!--<link rel="stylesheet" type="text/css" href="../components/javascripts/jquery-ui.theme.min.css"/>-->
+    <!--<link rel="stylesheet" type="text/css" href="/javascripts/query-ui.min.css"/>-->
+    <!--<link rel="stylesheet" type="text/css" href="/javascripts/jquery-ui.theme.min.css"/>-->
 
-    <!--<link rel="stylesheet" type="text/css" href="../components/javascripts/jquery-ui-1.10.3.custom.min.js"/>-->
-    <!--<link rel="stylesheet" type="text/css" href="../components/javascripts/jquery-ui-1.10.3.full.min.js"/>-->
-    <!--<link rel="stylesheet" type="text/css" href="../components/plugins/jqGrid/css/ui.jqgrid-bootstrap-ui.css"/>-->
-    <!--<link rel="stylesheet" type="text/css" href="../components/plugins/jqGrid/css/ui.jqgrid.css"/>-->
+    <!--<link rel="stylesheet" type="text/css" href="/javascripts/jquery-ui-1.10.3.custom.min.js"/>-->
+    <!--<link rel="stylesheet" type="text/css" href="/javascripts/jquery-ui-1.10.3.full.min.js"/>-->
+    <!--<link rel="stylesheet" type="text/css" href="/plugins/jqGrid/css/ui.jqgrid-bootstrap-ui.css"/>-->
+    <!--<link rel="stylesheet" type="text/css" href="/plugins/jqGrid/css/ui.jqgrid.css"/>-->
 
 
 </head>
@@ -25,9 +25,9 @@
 </div>
 
 
-<!--<script src="../components/javascripts/jquery-2.0.3.min.js" type="text/javascript" charset="utf-8"></script>-->
-<script src="../components/plugins/jqGrid/js/grid.locale-cn.js" type="text/javascript" charset="utf-8"></script>
-<script src="../components/plugins/jqGrid/js/jquery.jqGrid.min.js" type="text/javascript" charset="utf-8"></script>
+<!--<script src="/javascripts/jquery-2.0.3.min.js" type="text/javascript" charset="utf-8"></script>-->
+<script src="/plugins/jqGrid/js/grid.locale-cn.js" type="text/javascript" charset="utf-8"></script>
+<script src="/plugins/jqGrid/js/jquery.jqGrid.min.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
     //当 datatype 为"local" 时需填写
     var grid_data = [{
