--- a/tpls/knowledgeRepo/knowledgeList2.html
+++ b/tpls/knowledgeRepo/knowledgeList2.html
@@ -26,8 +26,8 @@
 
 
 <!--<script src="../components/javascripts/jquery-2.0.3.min.js" type="text/javascript" charset="utf-8"></script>-->
-<script src="../components/plugins/jqGrid/js/grid.locale-cn.js" type="text/javascript" charset="utf-8"></script>
-<script src="../components/plugins/jqGrid/js/jquery.jqGrid.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="/plugins/jqGrid/js/grid.locale-cn.js" type="text/javascript" charset="utf-8"></script>
+<script src="/plugins/jqGrid/js/jquery.jqGrid.min.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
     //当 datatype 为"local" 时需填写
     var grid_data = [{
