--- a/tpls/index.html
+++ b/tpls/index.html
@@ -7,31 +7,31 @@
 		<meta name="description" content="中环知识库管理系统" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- basic styles -->
-		<link href="../components/stylesheets/bootstrap.min.css" rel="stylesheet" />
-		<link rel="stylesheet" href="../components/stylesheets/font-awesome.min.css" />
+		<link href="/stylesheets/bootstrap.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="/stylesheets/font-awesome.min.css" />
 
 		<!--[if IE 7]>
-		<link rel="stylesheet" href="../components/stylesheets/font-awesome-ie7.min.css"/>
-		<link rel="stylesheet" href="../components/plugins/toastr/toastr.min.css"/>
+		<link rel="stylesheet" href="/stylesheets/font-awesome-ie7.min.css"/>
+		<link rel="stylesheet" href="/plugins/toastr/toastr.min.css"/>
 		<![endif]-->
 
 		<!-- ace styles -->
-		<link rel="stylesheet" href="../components/stylesheets/ace/ace.min.css" />
-		<link rel="stylesheet" href="../components/stylesheets/ace/ace-rtl.min.css" />
-		<link rel="stylesheet" href="../components/stylesheets/ace/ace-my-skins.css" />
+		<link rel="stylesheet" href="/stylesheets/ace/ace.min.css" />
+		<link rel="stylesheet" href="/stylesheets/ace/ace-rtl.min.css" />
+		<link rel="stylesheet" href="/stylesheets/ace/ace-my-skins.css" />
 		<!--[if lte IE 8]>
-		<link rel="stylesheet" href="../components/stylesheets/ace/ace-ie.min.css"/>
+		<link rel="stylesheet" href="/stylesheets/ace/ace-ie.min.css"/>
 		<![endif]-->
 
-		<script src="../components/javascripts/jquery-2.0.3.min.js"></script>
+		<script src="/javascripts/jquery-2.0.3.min.js"></script>
 
-		<script src="../components/javascripts/ace-extra.min.js"></script>
+		<script src="/javascripts/ace-extra.min.js"></script>
 
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 
 		<!--[if lt IE 9]>
 		<!--<script src="assets/js/html5shiv.js"></script>-->
-		<script src="../components/javascripts/respond.min.js"></script>
+		<script src="/javascripts/respond.min.js"></script>
 		<![endif]-->
 		<style>
 			#login-box-bg{
@@ -278,34 +278,34 @@
 		<script type="text/javascript">
 			if("ontouchend" in document) document.write("<script src='assets/js/jquery.mobile.custom.min.js'>"+"<"+"script>");
 		</script>
-		<script src="../components/javascripts/bootstrap/bootstrap.min.js"></script>
+		<script src="/javascripts/bootstrap/bootstrap.min.js"></script>
 
 		<!-- page specific plugin scripts -->
 
 		<!--[if lte IE 8]>
-		<script src="../components/javascripts/excanvas.min.js"></script>
+		<script src="/javascripts/excanvas.min.js"></script>
 		<![endif]-->
 
 		<!-- ace scripts -->
 
-		<script src="../components/javascripts/ace-elements.min.js"></script>
-		<script src="../components/javascripts/ace.min.js"></script>
+		<script src="/javascripts/ace-elements.min.js"></script>
+		<script src="/javascripts/ace.min.js"></script>
 
-		<script src="../components/plugins/toastr/toastr.min.js"></script>
+		<script src="/plugins/toastr/toastr.min.js"></script>
 		<!--angularjs scripts-->
 
-		<script src="../components/javascripts/angular.min.js"></script>
-		<script src="../components/javascripts/angular-ui-router.min.js"></script>
-		<script src="../components/javascripts/ocLazyLoad.min.js"></script>
+		<script src="/javascripts/angular.min.js"></script>
+		<script src="/javascripts/angular-ui-router.min.js"></script>
+		<script src="/javascripts/ocLazyLoad.min.js"></script>
 
 		<!--全局常量-->
-		<script src="../components/javascripts/globalset/globalset.js"></script>
-		<script src="../components/javascripts/config.lazyload.js"></script>
-		<script src="../components/javascripts/config.router.js"></script>
+		<script src="/javascripts/globalset/globalset.js"></script>
+		<script src="/javascripts/config.lazyload.js"></script>
+		<script src="/javascripts/config.router.js"></script>
 		<!-- inline scripts related to this page -->
-		<script src="../components/javascripts/globalset/jsconst.js"></script>
-		<script src="../components/javascripts/controllers/indexController.js"></script>
-		<script src="../components/javascripts/index.js"></script>
+		<script src="/javascripts/globalset/jsconst.js"></script>
+		<script src="/javascripts/controllers/indexController.js"></script>
+		<script src="/javascripts/index.js"></script>
 
 		<script>
 
