--- a/tpls/knowledgeRepo/knowledgeApprova.html
+++ b/tpls/knowledgeRepo/knowledgeApprova.html
@@ -338,13 +338,13 @@
 ////                $("#myform").after(msg); //将返回信息插入页面对应的元素后
 //            });
             alert("审批成功！")
-            location.href = "index.html#!/knowledgeRepo/knowledgeList.html";
+            location.href = "home.html#!/knowledgeRepo/knowledgeList.html";
 
             return false;
         });
     });
     $("#back").click(function () {
-            location.href = "index.html#!/knowledgeRepo/knowledgeList2.html";
+            location.href = "home.html#!/knowledgeRepo/knowledgeList2.html";
         }
     )
 
