--- a/tpls/knowledgeRepo/knowledgeEdit.html
+++ b/tpls/knowledgeRepo/knowledgeEdit.html
@@ -280,13 +280,13 @@
 //                $("#myform").after(msg); //将返回信息插入页面对应的元素后
             });
             alert("编辑成功！")
-           location.href="index.html#!/knowledgeRepo/knowledgeList.html"
+           location.href="home.html#!/knowledgeRepo/knowledgeList.html"
 
         });
     });
 
     $("#back").click(function () {
-        location.href="index.html#!/knowledgeRepo/knowledgeList.html";
+        location.href="home.html#!/knowledgeRepo/knowledgeList.html";
     })
 
 </script>
