--- a/tpls/knowledgeRepo/knowledgeList.html
+++ b/tpls/knowledgeRepo/knowledgeList.html
@@ -181,7 +181,7 @@
                 buttonicon:"icon-plus-sign purple",
                 onClickButton:function () {
 
-                    location.href="index.html#!/knowledgeRepo/knowledgeAdd.html"
+                    location.href="home.html#!/knowledgeRepo/knowledgeAdd.html"
                 },
 //                title:"知识添加",
                 position:"first"
@@ -197,11 +197,11 @@
                 if(ids==''){
                     alert("请选择需要编辑的内容");
 
-                    location.href="index.html#!/knowledgeRepo/knowledgeList.html"
+                    location.href="home.html#!/knowledgeRepo/knowledgeList.html"
 
                 }else {
 
-                location.href="index.html#!/knowledgeRepo/knowledgeEdit.html?id="+ids}
+                location.href="home.html#!/knowledgeRepo/knowledgeEdit.html?id="+ids}
             },
 //                title:"知识编辑",
             position:"first"
