--- a/tpls/knowledgeRepo/knowledgeList2.html
+++ b/tpls/knowledgeRepo/knowledgeList2.html
@@ -171,11 +171,11 @@
                 if(ids==''){
                     alert("请选择需要编辑的内容");
 
-                    location.href="index.html#!/knowledgeRepo/knowledgeList2.html"
+                    location.href="home.html#!/knowledgeRepo/knowledgeList2.html"
 
                 }else {
 
-                location.href="index.html#!/knowledgeRepo/knowledgeApprova.html?id="+ids}
+                location.href="home.html#!/knowledgeRepo/knowledgeApprova.html?id="+ids}
             },
 //                title:"知识编辑",
             position:"first"
