--- a/tpls/search.html
+++ b/tpls/search.html
@@ -57,7 +57,7 @@
                 <ul>
                     <li ng-repeat="result in response.data.list" class="resultItem">
                         <div class="result-header">
-                            <h3><a href="index.html#!/knowledgeDetail.html?detailId={{result.id}}"
+                            <h3><a href="home.html#!/knowledgeDetail.html?detailId={{result.id}}"
                                    ng-bind-html="getTrustedHtml(result.kTitle)"></a>
                             </h3>
                         </div>
