--- a/tpls/home.html
+++ b/tpls/home.html
@@ -1,12 +1,315 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>
-    home
-</h1>
+	<head>
+		<meta charset="utf-8" />
+		<title>中环知识库管理系统</title>
+		<meta name="keywords" content="中环知识库管理系统" />
+		<meta name="description" content="中环知识库管理系统" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- basic styles -->
+		<link href="/stylesheets/bootstrap.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="/stylesheets/font-awesome.min.css" />
+
+		<!--[if IE 7]>
+		<link rel="stylesheet" href="/stylesheets/font-awesome-ie7.min.css"/>
+		<link rel="stylesheet" href="/plugins/toastr/toastr.min.css"/>
+		<![endif]-->
+
+		<!-- ace styles -->
+		<link rel="stylesheet" href="/stylesheets/ace/ace.min.css" />
+		<link rel="stylesheet" href="/stylesheets/ace/ace-rtl.min.css" />
+		<link rel="stylesheet" href="/stylesheets/ace/ace-my-skins.css" />
+		<!--[if lte IE 8]>
+		<link rel="stylesheet" href="/stylesheets/ace/ace-ie.min.css"/>
+		<![endif]-->
+
+		<script src="/javascripts/jquery-2.0.3.min.js"></script>
+
+		<script src="/javascripts/ace-extra.min.js"></script>
+
+		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+
+		<!--[if lt IE 9]>
+		<!--<script src="assets/js/html5shiv.js"></script>-->
+		<script src="/javascripts/respond.min.js"></script>
+		<![endif]-->
+		<style>
+			#login-box-bg{
+				background-color: rgba(0, 0, 0, 0.2);
+				position: fixed;
+				z-index: 998;
+				width: 100%;
+				height: 100%;
+			}
+			#login-box{
+				position: relative;
+				background-color: #EEEEEE;
+				top:20%;
+				z-index: 999;
+				border: 1px solid gray;
+				border-radius: 5px;
+				width: 400px;
+				height: 300px;
+			}
+		</style>
+	</head>
+
+	<body class="myAceSkin"  ng-app="indexapp">
+		<div class="navbar navbar-default" id="navbar">
+			<script type="text/javascript">
+				try{ace.settings.check('navbar' , 'fixed')}catch(e){}
+			</script>
+
+			<div class="navbar-container" id="navbar-container">
+				<div class="navbar-header pull-left">
+					<a href="#" class="navbar-brand">
+						<small>
+							<i class="icon-leaf"></i>
+							中环知识库管理系统
+						</small>
+					</a><!-- /.brand -->
+				</div><!-- /.navbar-header -->
+
+				<div class="navbar-header pull-right" role="navigation" ng-controller="navController">
+					
+					<ul class="nav ace-nav">
+
+						<!--<li class="purple">-->
+							<!--<a data-toggle="dropdown" class="dropdown-toggle" href="#">-->
+								<!--<i class="icon-bell-alt icon-animated-bell"></i>-->
+								<!--<span class="badge badge-important">8</span>-->
+							<!--</a>-->
+
+							<!--<ul class="pull-right dropdown-navbar navbar-pink dropdown-menu dropdown-caret dropdown-close">-->
+								<!--<li class="dropdown-header">-->
+									<!--<i class="icon-warning-sign"></i>-->
+									<!--8条通知-->
+								<!--</li>-->
+
+								<!--<li>-->
+									<!--<a href="#">-->
+										<!--<div class="clearfix">-->
+											<!--<span class="pull-left">-->
+												<!--<i class="btn btn-xs no-hover btn-pink icon-comment"></i>-->
+												<!--新闻评论-->
+											<!--</span>-->
+											<!--<span class="pull-right badge badge-info">+12</span>-->
+										<!--</div>-->
+									<!--</a>-->
+								<!--</li>-->
+
+								<!--<li>-->
+									<!--<a href="#">-->
+										<!--<i class="btn btn-xs btn-primary icon-user"></i>-->
+										<!--切换为编辑登录..-->
+									<!--</a>-->
+								<!--</li>-->
+
+								<!--<li>-->
+									<!--<a href="#">-->
+										<!--<div class="clearfix">-->
+											<!--<span class="pull-left">-->
+												<!--<i class="btn btn-xs no-hover btn-success icon-shopping-cart"></i>-->
+												<!--新订单-->
+											<!--</span>-->
+											<!--<span class="pull-right badge badge-success">+8</span>-->
+										<!--</div>-->
+									<!--</a>-->
+								<!--</li>-->
+
+								<!--<li>-->
+									<!--<a href="#">-->
+										<!--<div class="clearfix">-->
+											<!--<span class="pull-left">-->
+												<!--<i class="btn btn-xs no-hover btn-info icon-twitter"></i>-->
+												<!--粉丝-->
+											<!--</span>-->
+											<!--<span class="pull-right badge badge-info">+11</span>-->
+										<!--</div>-->
+									<!--</a>-->
+								<!--</li>-->
+
+								<!--<li>-->
+									<!--<a href="#">-->
+										<!--查看所有通知-->
+										<!--<i class="icon-arrow-right"></i>-->
+									<!--</a>-->
+								<!--</li>-->
+							<!--</ul>-->
+						<!--</li>-->
+
+						<li >
+							<a data-toggle="dropdown" href="#" class="dropdown-toggle">
+								<img class="nav-user-photo" src="/images/user.jpg" alt="Jason's Photo" />
+								<span class="user-info">
+									<small>欢迎光临,</small>
+									<!--Jason-->
+                                    {{currUser.uName}}
+								</span>
+
+								<i class="icon-caret-down"></i>
+							</a>
+
+							<ul class="user-menu pull-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
+								<li>
+									<a href="#">
+										<i class="icon-cog"></i>
+										设置
+									</a>
+								</li>
+
+								<li>
+									<a href="#">
+										<i class="icon-user"></i>
+										个人资料
+									</a>
+								</li>
+
+								<li class="divider"></li>
+
+								<li ng-click="quit()">
+									<a href="#">
+										<i class="icon-off"></i>
+										退出
+									</a>
+								</li>
+							</ul>
+						</li>
+					</ul><!-- /.ace-nav -->
+				</div><!-- /.navbar-header -->
+			</div><!-- /.container -->
+		</div>
+
+		<div class="main-container" id="main-container" ng-controller="mainCtrl">
+			<script type="text/javascript">
+				try{ace.settings.check('main-container' , 'fixed')}catch(e){}
+			</script>
+			<!--<div id="login-box-bg" ng-hide="{{hideflag}}" ng-controller="loginboxCtrl">-->
+				<!--<div id="login-box" class="container">-->
+					<!--<div class="row">-->
+						<!--<div class="col-sm-12" style="text-align: center">-->
+							<!--<h1>登录</h1>-->
+						<!--</div>-->
+						<!--<div class="col-sm-10 col-sm-offset-1" >-->
+							<!--<form class="form-horizontal" role="form">-->
+								<!--<div class="form-group">-->
+									<!--<label>用户名</label>-->
+									<!--<input class="form-control" name="username" ng-model="username" placeholder="输入用户名" type="text">-->
+								<!--</div>-->
+								<!--<div class="form-group">-->
+									<!--<label>密码</label>-->
+									<!--<input class="form-control" name="password" ng-model="password" placeholder="输入密码" type="password">-->
+								<!--</div>-->
+								<!--<div style="text-align: center">-->
+									<!--<button class="btn btn-info" style="display: inline-block" ng-click="login()">登录</button>-->
+								<!--</div>-->
+							<!--</form>-->
+						<!--</div>-->
+					<!--</div>-->
+				<!--</div>-->
+			<!--</div>-->
+			<div class="main-container-inner">
+				<a class="menu-toggler" id="menu-toggler" href="#">
+					<span class="menu-text"></span>
+				</a>
+
+				<div class="sidebar" id="sidebar">
+					<script type="text/javascript">
+						try{ace.settings.check('sidebar' , 'fixed')}catch(e){}
+					</script>
+
+					<ul class="nav nav-list" ng-controller="navListCtrl">
+						<li id="{{'nav-'+resnode.id}}" ng-repeat="resnode in resTree | orderBy:'sIndex'" ng-include="'navTreeItem.html'">
+						</li>
+					</ul><!-- /.nav-list -->
+
+					<div class="sidebar-collapse" id="sidebar-collapse">
+						<i class="icon-double-angle-left" data-icon1="icon-double-angle-left" data-icon2="icon-double-angle-right"></i>
+					</div>
+
+					<script type="text/javascript">
+						try{ace.settings.check('sidebar' , 'collapsed')}catch(e){}
+					</script>
+				</div>
+
+				<div class="main-content">
+
+					<!-- 面包屑 导航条-->
+
+					<div class="breadcrumbs" id="breadcrumbs">
+						<script type="text/javascript">
+							try{ace.settings.check('breadcrumbs' , 'fixed')}catch(e){}
+						</script>
+
+						<ul class="breadcrumb" ng-controller="breadcrumbCtrl">
+							<li>
+								<i class="icon-home home-icon"></i>
+								<a href="#">首页</a>
+							</li>
+							<li ng-repeat="path in urlPath" class="{{$last?'active':''}}">{{path}}</li>
+						</ul><!-- .breadcrumb -->
+
+					</div>
+
+					<!--功能页面内容 在此div 下-->
+
+					<div class="page-content" ui-view>
+					</div><!-- /.page-content -->
+				</div><!-- /.main-content -->
+
+			</div><!-- /.main-container-inner -->
+
+			<a href="#" id="btn-scroll-up" class="btn-scroll-up btn btn-sm btn-inverse">
+				<i class="icon-double-angle-up icon-only bigger-110"></i>
+			</a>
+		</div><!-- /.main-container -->
+
+		<!-- basic scripts -->
+
+		<!--[if !IE]> -->
+
+
+		<!-- <![endif]-->
+
+		<!--[if IE]>
+		<!--<script src="assets\js\jquery-1.10.2.min.js"></script>-->
+		<!--<![endif]-->
+
+		<script type="text/javascript">
+			if("ontouchend" in document) document.write("<script src='assets/js/jquery.mobile.custom.min.js'>"+"<"+"script>");
+		</script>
+		<script src="/javascripts/bootstrap/bootstrap.min.js"></script>
+
+		<!-- page specific plugin scripts -->
+
+		<!--[if lte IE 8]>
+		<script src="/javascripts/excanvas.min.js"></script>
+		<![endif]-->
+
+		<!-- ace scripts -->
+
+		<script src="/javascripts/ace-elements.min.js"></script>
+		<script src="/javascripts/ace.min.js"></script>
+
+		<script src="/plugins/toastr/toastr.min.js"></script>
+		<!--angularjs scripts-->
+
+		<script src="/javascripts/angular.min.js"></script>
+		<script src="/javascripts/angular-ui-router.min.js"></script>
+		<script src="/javascripts/ocLazyLoad.min.js"></script>
+
+		<!--全局常量-->
+		<script src="/javascripts/globalset/globalset.js"></script>
+		<script src="/javascripts/config.lazyload.js"></script>
+		<script src="/javascripts/config.router.js"></script>
+		<!-- inline scripts related to this page -->
+		<script src="/javascripts/globalset/jsconst.js"></script>
+		<script src="/javascripts/controllers/indexController.js"></script>
+		<script src="/javascripts/index.js"></script>
+
+		<script>
+
+		</script>
+
 </body>
 </html>
