--- a/tpls/knowledgeDetail.html
+++ b/tpls/knowledgeDetail.html
@@ -49,7 +49,7 @@
     </div>
     <div class="row item">
         <div class="col-lg-12">
-            <a href="index.html#!/search.html" class="btn btn-lg btn-success">
+            <a href="home.html#!/search.html" class="btn btn-lg btn-success">
                 返回
             </a>
         </div>
