--- a/tpls/knowledgeRepo/knowledgeEdit.html
+++ b/tpls/knowledgeRepo/knowledgeEdit.html
@@ -154,7 +154,7 @@
         var num=str.indexOf("?");
         str=str.substr(num+1);
 
-        var url="http://localhost:8080/knowledgeRepo/kno/queryKnowledgeById.form?"+str;
+        var url=BASE_URL+"kno/queryKnowledgeById.form?"+str;
 
             $.ajax({
                 type: "GET",
@@ -256,7 +256,7 @@
 
             $.ajax({
                 type: "GET",
-                url: "http://localhost:8080/knowledgeRepo/kno/updateKnowledge.form",
+                url: BASE_URL+"kno/updateKnowledge.form",
                 dataType: "json",
                 data: data,
                 headers: {"Current-UserId": JSON.parse(window.sessionStorage.getItem("currUser")).id},
@@ -271,14 +271,14 @@
             });
 
 
-            $.getJSON("http://localhost:8080/knowledgeRepo/updateKnowledge.form",data,function(json){
-                var msg = '';
-
-                    msg = "<div id='result'><strong>提交成功！</strong><br/>姓名："
-
-
-//                $("#myform").after(msg); //将返回信息插入页面对应的元素后
-            });
+//            $.getJSON("http://localhost:8080/knowledgeRepo/updateKnowledge.form",data,function(json){
+//                var msg = '';
+//
+//                    msg = "<div id='result'><strong>提交成功！</strong><br/>姓名："
+//
+//
+////                $("#myform").after(msg); //将返回信息插入页面对应的元素后
+//            });
             alert("编辑成功！")
            location.href="home.html#!/knowledgeRepo/knowledgeList.html"
 
@@ -286,7 +286,7 @@
     });
 
     $("#back").click(function () {
-        location.href="home.html#!/knowledgeRepo/knowledgeList.html";
+        location.href="index.html#!/knowledgeRepo/knowledgeList.html";
     })
 
 </script>
