--- a/tpls/knowledgeRepo/knowledgeApprova.html
+++ b/tpls/knowledgeRepo/knowledgeApprova.html
@@ -314,7 +314,7 @@
 
             $.ajax({
                 type: "GET",
-                url: "http://localhost:8080/knowledgeRepo/kno/knowledgeApprova.form",
+                url: BASE_URL+"kno/knowledgeApprova.form",
                 data:data,
                 dataType: "json",
                 headers: {"Current-UserId": JSON.parse(window.sessionStorage.getItem("currUser")).id},
