--- a/tpls/knowledgeRepo/knowledgeList2.html
+++ b/tpls/knowledgeRepo/knowledgeList2.html
@@ -55,7 +55,7 @@
                 }
             },
 
-            url: "http://localhost:8080/knowledgeRepo/kno/selectPage2.form",
+            url: BASE_URL+"kno/selectPage2.form",
 
 
             mtype: "GET",
