--- a/tpls/knowledgeRepo/knowledgeApprova.html
+++ b/tpls/knowledgeRepo/knowledgeApprova.html
@@ -243,7 +243,7 @@
 
 
 
-        var url = "http://localhost:8080/knowledgeRepo/kno/queryKnowledgeById.form?" + str;
+        var url = BASE_URL+"kno/queryKnowledgeById.form?" + str;
 
         $.ajax({
             type: "GET",
