--- a/tpls/knowledgeRepo/knowledgeEdit.html
+++ b/tpls/knowledgeRepo/knowledgeEdit.html
@@ -103,7 +103,7 @@
         }
     </style>
 
-    <!--<script src="/javascripts/wangEditor.min.js"></script>-->
+    <script src="/javascripts/wangEditor.min.js"></script>
     <!--<script src="/javascripts/jquery-2.0.3.min.js" type="text/javascript" charset="utf-8"></script>-->
 </head>
 <body onload="UrlSearch();">
