--- a/tpls/knowledgeRepo/knowledgeApprova.html
+++ b/tpls/knowledgeRepo/knowledgeApprova.html
@@ -136,12 +136,13 @@
         /*}*/
     </style>
 
-    <script src="/javascripts/wangEditor.min.js"></script>
-    <script src="/javascripts/jquery-2.0.3.min.js" type="text/javascript" charset="utf-8"></script>
+    <!--<script src="/javascripts/wangEditor.min.js"></script>-->
+    <!--<script src="/javascripts/jquery-2.0.3.min.js" type="text/javascript" charset="utf-8"></script>-->
+    <!--<script src="../../components/javascripts/res_js/knowledgeList.js"></script>-->
 </head>
 <body>
 <div class="basic-grey">
-    <form action="#" method="post" class="STYLE-NAME" id="knowledge">
+    <form  method="post" class="STYLE-NAME" id="knowledge">
         <h1>知识审批
             <!--<span>Please fill all the texts in the fields.</span>-->
         </h1>
@@ -204,7 +205,7 @@
 
         <label>
             <span>审批意见 :</span>
-            <textarea id="kApprMemo" name="kApprMemo" placeholder="填写知识解答"></textarea>
+            <textarea id="kApprMemo" name="kApprMemo" placeholder="填写审批意见"></textarea>
             <!--<input id="kApprMemo" name="kApprMemo" style="display:none"/>-->
             <input id="button" name="button" style="display:none"/>
             <!--<div id="div1" class="text">-->
@@ -244,7 +245,6 @@
 
 
         var url = BASE_URL+"kno/queryKnowledgeById.form?" + str;
-
         $.ajax({
             type: "GET",
             url: url,
@@ -316,20 +316,20 @@
                 type: "GET",
                 url: BASE_URL+"kno/knowledgeApprova.form",
                 data:data,
-                dataType: "json",
                 headers: {"Current-UserId": JSON.parse(window.sessionStorage.getItem("currUser")).id},
                 success: function (json) {
                     var msg = '';
 
                     msg = "<div id='result'><strong>提交成功！</strong><br/>姓名："
-
+                    alert("审批成功！");
+                    location.href ="#!/knowledgeRepo/knowledgeList2.html";
 
 //                $("#myform").after(msg); //将返回信息插入页面对应的元素后
 
                 }
             });
 
-//            $.getJSON("http://localhost:8080/knowledgeRepo/knowledgeApprova.form", data, function (json) {
+//            $.getJSON(BASE_URL+"knowledgeApprova.form", data, function (json) {
 //                var msg = '';
 //
 //                msg = "<div id='result'><strong>提交成功！</strong><br/>姓名："
@@ -337,14 +337,10 @@
 //
 ////                $("#myform").after(msg); //将返回信息插入页面对应的元素后
 //            });
-            alert("审批成功！")
-            location.href = "home.html#!/knowledgeRepo/knowledgeList.html";
-
-            return false;
         });
     });
     $("#back").click(function () {
-            location.href = "home.html#!/knowledgeRepo/knowledgeList2.html";
+            location.href ="#!/knowledgeRepo/knowledgeList2.html";
         }
     )
 
