--- a/tpls/knowledgeRepo/knowledgeAdd.html
+++ b/tpls/knowledgeRepo/knowledgeAdd.html
@@ -106,7 +106,7 @@
 </head>
 <body ng-app="knlgAdd">
 <div class="basic-grey" ng-controller="knlgAddCtrl">
-    <form action="#" method="post" class="STYLE-NAME" id="knowledge">
+    <form method="post" class="STYLE-NAME" id="knowledge">
         <h1>知识录入
             <!--<span>Please fill all the texts in the fields.</span>-->
         </h1>
