--- a/tpls/knowledgeRepo/knowledgeApprova.html
+++ b/tpls/knowledgeRepo/knowledgeApprova.html
@@ -152,25 +152,31 @@
 
             <table>
                 <tr>
-                    <td>知识标题：</td>
+                    <td style="width: 100px">知识标题：</td>
                     <td><span id="kTitle"></span></td>
                 </tr>
+
+                </tr>
+
+                <td>使用次数：</td>
+                <td><span id="kUseCount"></span></td>
+                </tr>
+
                 <tr>
                     <td>知识解答：
-
                     </td>
+                    <td></td>
 
-                    <td>
-
-                        <!--<div id="div2" class="text" >-->
-                        <!--<p id="aa"></p>-->
-                    <!--</div>-->
-                        <p id="aa"></p>
-                    </td>
                 <tr>
-                    <td>使用次数：</td>
-                    <td><span id="kUseCount"></span></td>
-                </tr>
+
+
+                <tr>
+
+                <td colspan="2">
+                    <p id="aa"></p>
+                </td>
+
+
             </table>
 
 
